<resources>
    <string name="app_name">FlareNetMessenger</string>
    <string name="title_activity_inbox">Inbox</string>
    <string name="title_activity_wallet">Wallets</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="credentials">Credentials</string>
    <string name="sync_header">Sync</string>
    <string name="import_privatekey">Import private key(s)</string>
    <string name="app_pin">Set Application PIN</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="fullnode_ip" translatable="false">54.236.37.243</string>
    <string name="fullnode_port" translatable="false">50051</string>
    <string name="soliditynode_ip" translatable="false">47.89.187.247</string>
    <string name="soliditynode_port" translatable="false">50051</string>
    <string name="app_version" translatable="false">v1.1.9.4</string>
    <string name="preference_file_key" translatable="false">com.eletac.tronwallet.wallet_preferences</string>
    <string name="pwd_key" translatable="false">pwd_key</string>
    <string name="priv_key" translatable="false">priv_key</string>
    <string name="pub_key" translatable="false">pub_key</string>
    <string name="is_cold_wallet_key" translatable="false">is_cold_wallet_key</string>
    <string name="preference_account_file_key" translatable="false">com.eletac.tronwallet.wallet_account_preferences</string>
    <string name="name_key" translatable="false">name_key</string>
    <string name="balance_key" translatable="false">balance_key</string>
    <string name="latest_operation_time_key" translatable="false">latest_operation_time_key</string>
    <string name="assets_key" translatable="false">assets_key</string>
    <string name="public_address_raw" translatable="false">public_address_raw</string>
    <string name="is_public_address_only" translatable="false">is_public_address_only</string>
    <string name="votes_key" translatable="false">votes_key</string>
    <string name="create_time_key" translatable="false">create_time_key</string>
    <string name="address_key" translatable="false">address_key</string>
    <string name="frozen_key" translatable="false">frozen_key</string>
    <string name="bandwidth_key" translatable="false">bandwidth_key</string>
    <string name="ip_key" translatable="false">ip</string>
    <string name="port_key" translatable="false">port</string>
    <string name="ip_sol_key" translatable="false">ip_sol</string>
    <string name="port_sol_key" translatable="false">port_sol</string>
    <string name="net_limit_key" translatable="false">net_limit_key</string>
    <string name="net_used_key" translatable="false">net_used_key</string>
    <string name="net_free_limit_key" translatable="false">net_free_limit_key</string>
    <string name="net_free_used_key" translatable="false">net_free_used_key</string>
    <string name="energy_limit_key" translatable="false">energy_limit_key</string>
    <string name="energy_used_key" translatable="false">energy_used_key</string>
    <string name="title_wallet">Wallet</string>
    <string name="title_activity_import_wallet">Import Wallet</string>
    <string name="title_block_explorer">Block Explorer</string>
    <string name="title_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="copy_success">Copied successfully</string>
    <string name="create_wallet_dialog_message">You are about to create a wallet with your entered password.\n\nIn the next screen you will see your address and your private key.</string>
    <string name="create_wallet_cold_dialog_message">You are about to create a cold wallet with your entered password.\n\nThis wallet is only used to sign transactions.\n\nIn the next screen you will see your address and your private key.</string>
    <string name="create_wallet_dialog_title">Create Wallet</string>
    <string name="import_wallet_dialog_message">You are about to import a wallet with your entered password and private key/recovery phrase.</string>
    <string name="import_wallet_cold_dialog_message">You are about to import your private key for a cold wallet with your entered password.\n\nThis wallet is only used to sign transactions.</string>
    <string name="import_wallet_dialog_title">Import Wallet</string>
    <string name="create_wallet_inv_password_dialog_message">Please enter a password with at least 6 characters and no whitespaces.</string>
    <string name="create_wallet_inv_password_dialog_title">Invalid Password</string>
    <string name="inv_private_key_dialog_message">Enter all 64 characters of your private key.</string>
    <string name="inv_private_key_dialog_title">Invalid Private Key</string>
    <string name="trx_symbol">TRX</string>
    <string name="title_activity_send_receive">Tron Wallet</string>
    <string name="tab_title_send">Send</string>
    <string name="tab_title_receive">Receive</string>
    <string name="action_settings">Settings</string>
    <string name="not_available_in_cold_wallet">Not available in cold wallet</string>
    <string name="cold_wallet_info_dialog">A cold wallet will never connect to the Internet and is only used to sign transactions.\n\nFor even greater security, you should also never connect your device to the Internet.\n\nUse another device with the Tron Wallet App and import your public address to have an overview of your wallet and sign transactions from it.</string>
    <string name="create_wallet">Create Wallet</string>
    <string name="import_wallet">Import Wallet</string>
    <string name="import_text">Import</string>
    <string name="title_activity_signed_transaction">Signed Transaction</string>
    <string name="title_activity_sign_transaction">Sign Transaction</string>
    <string name="tab_title_blockchain">Blockchain</string>
    <string name="tab_title_network">Network</string>
    <string name="tab_title_tokens">Tokens</string>
    <string name="tab_title_accounts">Accounts</string>
    <string name="transaction_successfully_sent">Transaction successfully sent!</string>
    <string name="transaction_sending_failed">Transaction failed!</string>
    <string name="tab_title_sign">Sign</string>
    <string name="title_activity_vote">Representatives</string>
    <string name="tab_title_candidates">Candidates</string>
    <string name="tab_title_votes">Your Votes</string>
    <string name="tab_title_representatives">Representatives</string>
    <string name="tab_title_nodes">Nodes</string>
    <string name="none">None</string>
    <string name="never">Never</string>
    <string name="account_item_votes_text">%s for %s candidates</string>
    <string name="multiple_witnesses">multiple witnesses</string>
    <string name="witness_votes">witness votes</string>
    <string name="confirm_signing">Confirm Signing</string>
    <string name="password">Password</string>
    <string name="sign">Sign</string>
    <string name="error">Error</string>
    <string name="failed_to_generate_qr_code">Failed to generate QR code</string>
    <string name="wrong_password">Wrong Password</string>
    <string name="signing_canceled">The signing of your transaction was canceled.</string>
    <string name="invalid_transaction">Invalid Transaction</string>
    <string name="no_valid_transaction_detected">No valid transaction was detected.</string>
    <string name="scan_transaction_qr_code">Scan the QR code of your transaction</string>
    <string name="cold_wallet">Cold Wallet</string>
    <string name="cold_wallet_setup">Cold Wallet Setup </string>
    <string name="scan_your_address_qr_code">Scan your public address QR code.</string>
    <string name="scan_your_priv_key_qr_code">Scan your private key QR code.</string>
    <string name="import_address">Import Address</string>
    <string name="import_address_message">You are about to import only your entered address.\n\nYou won\'t be able to make a transaction without your cold wallet.</string>
    <string name="invalid_address">Invalid Address</string>
    <string name="enter_valid_address">Enter a valid address</string>
    <string name="cant_send_to_own_address">You can\'t send to your own address</string>
    <string name="invalid_amount">Invalid Amount</string>
    <string name="enter_amount_between">Please enter an amount between %d and %s</string>
    <string name="send_message_text_asset">Asset:</string>
    <string name="send_message_text_to">To:</string>
    <string name="send_message_text_amount">Amount:</string>
    <string name="confirm_transaction">Confirm Transaction</string>
    <string name="send">Send</string>
    <string name="sending">Sending</string>
    <string name="sent_successfully">Sent successfully</string>
    <string name="sending_failed">Sending failed</string>
    <string name="scan_send_to_qr_code">Scan the QR code you want to send to.</string>
    <string name="scan_signed_transaction">Scan the QR code of your signed transaction from your cold wallet</string>
    <string name="confirm_votes">Confirm Votes</string>
    <string name="sign_to_submit">Sign to submit</string>
    <string name="submit">Submit</string>
    <string name="votes_submitted_successfully">Votes submitted successfully</string>
    <string name="submitting_failed">Submitting failed</string>
    <string name="try_later">Try again later</string>
    <string name="send_available">Available:</string>
    <string name="amount">Amount</string>
    <string name="to">To</string>
    <string name="asset">Asset</string>
    <string name="private_key">Private Key</string>
    <string name="address">Address</string>
    <string name="account">Account</string>
    <string name="continue_">Continue</string>
    <string name="store_the_private_key_securely">Store the private key and your 24 words recovery phrase securely!\ne.g. on a piece of paper in a safe.\n\nLosing both would end access to your account forever!</string>
    <string name="i_am_aware_of_the_risks">I am aware of the risks</string>
    <string name="new_password">New Password</string>
    <string name="new_name">New Name</string>
    <string name="password_info">Your password is important for every transaction. Without password you won\'t be able to access your assets through the wallet!</string>
    <string name="generate_address_and_private_key">Generate Address and Private Key</string>
    <string name="or">or</string>
    <string name="public_address">Public Address</string>
    <string name="private_key_info">Your private key is needed to sign transactions and access your assets</string>
    <string name="import_public_address_only">Import public address only</string>
    <string name="import_pub_address_only_info">Use this option when you already created a cold wallet or just want an overview of your account</string>
    <string name="recovery_phrase_switch">Recovery phrase </string>
    <string name="scan_unsigned_transaction">Scan your unsigned transaction with your cold wallet device to sign it.</string>
    <string name="save_wallet">Save Wallet</string>
    <string name="scan_pubkey">Scan Pubkey</string>
    <string name="public_key_paste_or_scan_below">Public Key (Paste, or Scan Below)</string>
    <string name="new_wallet_name">New Wallet Name</string>
</resources>