<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/publicKey"
        android:layout_width="353dp"
        android:layout_height="54dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/public_key_paste_or_scan_below"
        android:inputType="textShortMessage|textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newWalletName"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/import_wallet"
        android:textAppearance="@android:style/TextAppearance.Material.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/newWalletName"
        android:layout_width="353dp"
        android:layout_height="54dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/new_wallet_name"
        android:inputType="textShortMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/importPubKeyQR"
        android:text="@string/scan_pubkey"
        android:layout_width="205dp"
        android:layout_height="49dp"
        android:layout_marginTop="32dp"
        android:drawableLeft="@drawable/ic_qr_white"
        android:drawablePadding="10dp"
        android:background="@android:color/black"
        android:drawableTint="@android:color/white"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/publicKey" />

    <Button
        android:id="@+id/button8"
        android:layout_width="205dp"
        android:layout_height="49dp"
        android:layout_marginTop="32dp"
        android:text="@string/save_wallet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/importPubKeyQR" />

</androidx.constraintlayout.widget.ConstraintLayout>