<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:diagonal="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".PKeyScanner">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@color/cardview_dark_background"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="608dp"
                app:layout_constraintBottom_toBottomOf="@+id/Account_qr_address_imageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/diagonalLayout"
                app:layout_constraintVertical_bias="1.0"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="219dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ImportWallet_name_textInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="20dp"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView5"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ImportWallet_name_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/new_name"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.constraintlayout.widget.Constraints
                    android:id="@+id/constraintLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ImportWallet_name_textInputLayout">

                    <ImageButton
                        android:id="@+id/ImportWallet_priv_key_qr_button"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="20dp"
                        android:foreground="@color/cardview_light_background"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_qr_white"
                        app:layout_constraintBottom_toBottomOf="@+id/ImportWallet_priv_key_textInputLayout"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/ImportWallet_priv_key_textInputLayout" />

                    <!---        <ImageButton
                        android:id="@+id/ImportWallet_pub_address_qr_button"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginTop="8dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_qr_white"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="@+id/ImportWallet_pub_address_textInputLayout"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/ImportWallet_pub_address_textInputLayout" />
-->
                    <CheckBox
                        android:id="@+id/ImportWallet_risks_checkbox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/i_am_aware_of_the_risks"
                        android:visibility="visible"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/ImportWallet_cold_wallet_switch" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/ImportWallet_pub_address_textInputLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="8dp"
                        android:visibility="gone"
                        app:layout_constraintEnd_toStartOf="@+id/ImportWallet_pub_address_qr_button"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/ImportWallet_pub_address_editText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/public_address"
                            android:inputType="text" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/ImportWallet_password_textInputLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/ImportWallet_password_editText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/new_password"
                            android:inputType="textPassword" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/ImportWallet_priv_key_textInputLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="4dp"
                        android:ems="10"
                        android:hint="@string/private_key"
                        app:layout_constraintEnd_toStartOf="@+id/ImportWallet_priv_key_qr_button"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintTop_toBottomOf="@+id/ImportWallet_recovery_phrase_switch"
                        diagonal:layout_constraintEnd_toEndOf="parent"
                        diagonal:layout_constraintStart_toStartOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/ImportWallet_priv_key_editText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textMultiLine" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/ImportWallet_password_info_textView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="40dp"
                        android:text="@string/password_info"
                        app:layout_constraintTop_toBottomOf="@+id/ImportWallet_password_textInputLayout"
                        diagonal:layout_constraintEnd_toEndOf="parent"
                        diagonal:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/ImportWallet_priv_key_info_textView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="40dp"
                        android:text="@string/private_key_info"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/ImportWallet_priv_key_textInputLayout" />

                    <Switch
                        android:id="@+id/ImportWallet_cold_wallet_switch"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="27dp"
                        android:layout_marginTop="24dp"
                        android:text="@string/cold_wallet_setup"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/ImportWallet_priv_key_info_textView" />

                    <Switch
                        android:id="@+id/ImportWallet_recovery_phrase_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/recovery_phrase_switch"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/ImportWallet_password_info_textView" />
                </androidx.constraintlayout.widget.Constraints>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="144dp"
                    android:text="@string/import_wallet"
                    android:textAppearance="@android:style/TextAppearance.Material.Display1"
                    android:textColor="@android:color/white"
                    app:layout_constraintHorizontal_bias="0.504"
                    app:layout_constraintTop_toTopOf="parent"
                    diagonal:layout_constraintEnd_toEndOf="parent"
                    diagonal:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/ImportWallet_create_wallet_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="@android:color/white"

                    android:text="@string/create_wallet"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView4" />

                <Button
                    android:id="@+id/ImportWallet_import_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="50dp"
                    android:backgroundTint="@android:color/white"

                    android:text="@string/import_wallet"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
                    diagonal:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/or"
                    app:layout_constraintTop_toBottomOf="@+id/ImportWallet_import_button"
                    diagonal:layout_constraintEnd_toEndOf="parent"
                    diagonal:layout_constraintStart_toStartOf="parent" />


                <Switch
                    android:id="@+id/ImportWallet_address_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/import_public_address_only"
                    android:textAlignment="viewStart"
                    app:layout_constraintTop_toBottomOf="@+id/textView2"
                    diagonal:layout_constraintStart_toStartOf="parent"
                    tools:checked="false" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/import_pub_address_only_info"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/ImportWallet_address_switch"
                    app:layout_constraintTop_toBottomOf="@+id/ImportWallet_address_switch" />

                <ImageView
                    android:layout_width="193dp"
                    android:layout_height="103dp"
                    android:layout_marginStart="132dp"
                    android:layout_marginTop="16dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_qr_white"
                    diagonal:layout_constraintStart_toStartOf="parent"
                    diagonal:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/diagonalLayout"
        android:layout_width="match_parent"
        android:layout_height="140dp"

        android:visibility="visible"
        diagonal:layout_constraintEnd_toEndOf="parent"
        diagonal:layout_constraintStart_toStartOf="parent"
        diagonal:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="161dp"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="116dp"
                android:layout_height="114dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_qr_white"
                diagonal:layout_constraintStart_toStartOf="parent"
                diagonal:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

